@@ -3761,6 +3761,9 @@ tscripts_what=Scripts to install for new virtual servers:
 tscripts_none=None
 tscripts_below=Scripts below ..
 tscripts_name=Script
+tscripts_version=Version
+tscripts_latest=Latest available
+tscripts_exact=Always
 tscripts_path=URL path
 tscripts_dbtype=DB type
 tscripts_db=DB name
@@ -3768,6 +3771,7 @@ tscripts_dbdef=Main database
 tscripts_other=Other database..
 tscripts_err=Failed to save template scripts
 tscripts_epath=Missing or invalid URL path in row $1
+tscripts_eversion=Missing or invalid version number in row $1
 tscripts_edb=Missing or invalid database name in row $1
 tscripts_edb2=Database name in row $1 does not contain any substitions (like ${DB})
 tscripts_enone=No template scripts entered
