@@ -1143,3 +1143,4 @@ Added support for JSON, XML and Perl output to the remote API, enabled with the 
 Deprecated the feature to write logs via a program, as logging to /var/log/virtualmin is now the default.
 Added validation for incorrect SuExec Apache directives.
 If a single database backup for a virtual server fails, others will still be backed up.
+When editing default scripts in a template, an option to always install the latest version is now available.
